# gnc-language

./: Cargo.toml  assigment.gn  test.gn
src/: backup.rs  lib.rs  main.rs  runner.rs
src/ast/: expr.rs  mod.rs  stmt.rs
src/builtin/: array.rs  dictionary.rs  mod.rs  string.rs
src/context/: execution.rs  mod.rs  module.rs
src/interpreter/: interpreter.rs  mod.rs  signal.rs
src/lexer/: identifier.rs  lexer.rs  mod.rs  number.rs  scanner.rs
src/module/: loader.rs  registry.rs
src/parser/: parser.rs
src/runtime/: environment.rs  equality.rs  mod.rs  value.rs
src/token/: keyword.rs  mod.rs  token.rs
tests/: README.md  array.gn  function.gn
tests/array/: clear.gn  contains.gn  first.gn  insert.gn  is_empty.gn  last.gn  len.gn  literal.gn  pop.gn  push.gn  remove.gn  reverse.gn
tests/collection/: clear_dictionary.gn  clone_dictionary.gn  dictionary.gn  dictionary_keys.gn  dictionary_values.gn  get_dictionary.gn  has_key.gn  merge_dictionary.gn  remove_key.gn  set_dictionary.gn
tests/control/: for.gn  if.gn
tests/function/: function.gn
tests/module/: import_builtin.gn  main.gn  user.gn
tests/operator/: comparison.gn  compound_assignment.gn  decrement.gn  for_increment.gn  increment.gn  increment2.gn  logical.gn  short_circuit.gn  unary.gn
tests/string/: contains.gn  ends_with.gn  lower.gn  replace.gn  split.gn  starts_with.gn  trim.gn  upper.gn
tests/variable/: assign.gn
