// ==========================
// Variable
// ==========================
let angka = [10, 20, 30];

// ==========================
// Array
// ==========================
print(angka[0]);
print(angka[1]);
print(angka[2]);

// ==========================
// Builtin
// ==========================
print(len(angka));

// ==========================
// Function
// ==========================
fn tambah(a, b) {
    return a + b;
}

print(tambah(5, 7));
